# NetworkProgram

./: .gitignore  CMakeLists.txt  build.bat  main.cpp
include/: device.h  header.h  logging.h
logging/: logging.h
src/: device.cpp  header.cpp
